# ThemeChanger

./: .gitignore  README.md  default.nix  meson.build  shell.nix  themechanger.spec
data/: com.github.alex11br.themechanger.appdata.xml  com.github.alex11br.themechanger.desktop  meson.build
src/: applythemes.py  archivefilefilter.py  getavailablethemes.py  installthemes.py  main.py  meson.build  pixbuffromxcursor.c  searchablethemelist.py  searchablethemelist.ui  themechanger.gresource.xml  themechanger.in  window.py  window.ui
